--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "node": ">=0.10.38"
   },
   "dependencies": {
-    "chokidar": "^1.2.0",
+    "chokidar": "1.4.x",
     "mbtiles": "^0.8.0",
     "q": "^1.4.1",
     "tilelive": "^5.9.1"
